# libcpp-common

./: CMakeLists.txt  Compiler.cmake  Paths.cmake  README.md
example/: mesh.cpp
examples/: bitmap.cpp  geometry.cpp  log.cpp  mesh.cpp  tensor.cpp
include/libcpp-common/: bitmap.h  color.h  geometry.h  log.h  mesh.h  tensor.h  test.h
include/libcpp-common/bitmap/: npy.h  png.h  ppm.h
include/libcpp-common/detail/: exception.h
include/libcpp-common/mesh/: ply.h
src/: bitmap.tpp  color.cpp  log.cpp  mesh.cpp
src/bitmap/: npy.tpp  png.tpp  ppm.tpp
src/mesh/: ply.cpp
tests/: main.cpp
tests/geometry/: test_geometry.h
utils/: gdb_pretty_printers.py
